--- a/app/templates/video_title_tags/index.html
+++ b/app/templates/video_title_tags/index.html
@@ -59,7 +59,7 @@
                             <input type="text"
                                    class="input-textarea"
                                    id="keywordInput"
-                                   placeholder="e.g., best beginner deck 2025"
+                                   placeholder="e.g., Battlefield 6"
                                    style="min-height: 45px; padding: 0.75rem;">
                         </div>
 
