--- a/app/templates/tiktok/competitors.html
+++ b/app/templates/tiktok/competitors.html
@@ -101,20 +101,20 @@
                                 <div class="analysis-options" id="analysisOptions" style="display: none;">
                                 <div class="timeframe-selector">
                                     <label class="option-label">Analyze videos from:</label>
-                                    <div class="timeframe-buttons">
-                                        <button class="timeframe-btn" onclick="setTimeframe('1')" data-days="1">
+                                    <div class="view-toggle">
+                                        <button class="toggle-btn" onclick="setTimeframe('1')" data-days="1">
                                             Last 24 hours
                                         </button>
-                                        <button class="timeframe-btn" onclick="setTimeframe('2')" data-days="2">
+                                        <button class="toggle-btn" onclick="setTimeframe('2')" data-days="2">
                                             Last 48 hours
                                         </button>
-                                        <button class="timeframe-btn" onclick="setTimeframe('7')" data-days="7">
+                                        <button class="toggle-btn" onclick="setTimeframe('7')" data-days="7">
                                             Last 7 days
                                         </button>
-                                        <button class="timeframe-btn active" onclick="setTimeframe('30')" data-days="30">
+                                        <button class="toggle-btn active" onclick="setTimeframe('30')" data-days="30">
                                             Last 30 days
                                         </button>
-                                        <button class="timeframe-btn" onclick="setTimeframe('90')" data-days="90">
+                                        <button class="toggle-btn" onclick="setTimeframe('90')" data-days="90">
                                             Last 90 days
                                         </button>
                                     </div>
